TM-5482 Fixed unimportant fields not showing right color
git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@7934 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/base/color.sass
+++ b/web-app/css/base/color.sass
@@ -3,6 +3,7 @@
 $grey: #ddd
 $c_grey2: #ebebeb
 $c_grey3: #F4F4F4
+$darkgray : darkgray
 
 $white: #fff
 $c_white1: #f7f7f7
