--- a/web-app/css/elements/support/jqDialog.sass
+++ b/web-app/css/elements/support/jqDialog.sass
@@ -89,6 +89,9 @@ div.ui-dialog
         label
           color: $red !important
           font-weight: 700 !important
+      .U // unimportant Field
+        label
+          color: $darkgray !important
   div#createEntityView, div#checkBoxDiv, div#createStaffDialog, div#personGeneralViewId, div#personDialog
     background-color: $white
   div#checkBoxDiv
